--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "classnames": ">=2.0.0",
     "dom-lib": "^1.0.0",
     "lodash": "^4.11.1",
+    "lodash-es": "^4.17.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.0",
     "react-flow-types": "^0.2.0-beta.6",
